test/Fail/DoNotationEndingInBind.err
DoNotationEndingInBind.agda:7.5-11: error: [DoNotationError]
The last statement in a 'do' block must be an expression or an
absurd match.
when scope checking do x ← Set
